fix z-index

--- a/src/style/_off-canvas.scss
+++ b/src/style/_off-canvas.scss
@@ -2,8 +2,10 @@ $off-canvas-width: 250px;
 
 .off-canvas {
   position: absolute;
-  // background: $color-black;
-  z-index: -1;
+  
+  // в некоторых случаях контент выходит за границу, поэтому 
+  // делаем z-index 1, по умолчанию был -1
+  z-index: 1;
   max-height: 100%;
   overflow-y: auto;
   transform: translateX(0px);
